# src/controllers/user.ts
@@ -2,9 +2,9 @@ import {
   Route,
   Controller,
   Get,
-  // Put,
+  Put,
   Post,
-  // Delete,
+  Delete,
   Security,
   // Query,
   Path,
@@ -15,6 +15,7 @@ import {
 
 import { ProvideSingleton, inject } from '../config/ioc';
 import { UserAttributes, UserRequestData } from '../types/user';
+// import { PaginationResponse } from '../types/pagination';
 import { UserService } from '../services/user';
 
 @Tags('users')
@@ -35,13 +36,19 @@ export class UserController extends Controller {
     return user.toJSON();
   }
 
+  /**
+   * @param {number} page
+   * @isInt page
+   * @minimum page 1
+   */
+  // @Response(400, 'Bad request')
   // @Get()
   // public async getPaginated(
   //   @Query('page') page: number,
   //   @Query('limit') limit: number,
   //   @Query('fields') fields?: string,
   //   @Query('sort') sort?: string,
-  //   @Query('q') q?: string): Promise<IPaginationModel> {
+  //   @Query('q') q?: string): Promise<PaginationResponse> {
   //   return this.userService.getPaginated(page, limit, fields, sort, q);
   // }
 
@@ -52,16 +59,25 @@ export class UserController extends Controller {
     return this.userService.create(body);
   }
 
-  // @Response(400, 'Bad request')
-  // @Security('admin')
-  // @Put('{id}')
-  // public async update(id: string, @Body() body: IUserModel): Promise<IUserModel> {
-  //   return this.userService.update(id, body);
-  // }
+  /**
+   * @param {number} id
+   * @isInt id
+   */
+  @Response(400, 'Bad request')
+  @Security('admin')
+  @Put('{id}')
+  public async update(@Path() id: number, @Body() body: UserRequestData): Promise<UserAttributes> {
+    return this.userService.update(id, body);
+  }
 
-  // @Security('admin')
-  // @Delete('{id}')
-  // public async delete(id: string): Promise<void> {
-  //   return this.userService.delete(id);
-  // }
+  /**
+   * @param {number} id
+   * @isInt id
+   */
+  @Security('admin')
+  @Delete('{id}')
+  public async delete(@Path() id: number): Promise<void> {
+    await this.userService.delete(id);
+    return Promise.resolve();
+  }
 }
